[package]
name = "dcbor-cli"
version = "0.12.0"
edition = "2024"
description = "Command line parser/validator for deterministic CBOR (\"dCBOR\")."
authors = ["Blockchain Commons"]
license = "BSD-2-Clause-Patent"
repository = "https://github.com/BlockchainCommons/bc-dcbor-cli"
readme = "README.md"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = [
    "data-structures",
    "encoding",
    "command-line-utilities",
] # https://crates.io/category_slugs

[[bin]]
name = "dcbor"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bc-components = "0.26.0"
dcbor = "^0.23.1"
dcbor-parse = "^0.5.0"
dcbor-pattern = "^0.5.0"

clap = { version = "^4.0.0", features = ["derive"] }
anyhow = "^1.0.0"
hex = "^0.4.0"

[dev-dependencies]
indoc = "^2.0.0"
assert_cmd = "^2.0.0"
